# tiny-sql

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  release.yml
crates/db-driver/: Cargo.toml
crates/db-driver/src/: lib.rs
crates/db-driver/tests/: integration.rs
crates/ssh-multihop/: Cargo.toml
crates/ssh-multihop/src/: lib.rs
docs/: ARCHITECTURE.md  PLAN.md  RELEASE_CHECKLIST.md  REQUIREMENTS.md  ROADMAP.md  dogfooding-log.template.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  state.rs  tofu.rs
src-tauri/src/commands/: connection.rs  mod.rs  query.rs  ssh_tofu.rs
src-tauri/src/config/: encryption.rs  mod.rs  ssh_known_hosts.rs  store.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: confirm-dialog.tsx  connection-dialogs.tsx  connection-form.test.tsx  connection-form.tsx  context-menu.tsx  create-database-dialog.tsx  icons.tsx  schema-browser.tsx  topology-graph.tsx  update-dialog.tsx
src/components/ui/: tabs.tsx
src/hooks/: use-update-checker.ts
src/lib/: sql-guard.test.ts  sql-guard.ts  tauri-api.test.ts  tauri-api.ts
src/stores/: confirm-store.ts  connection-store.test.ts  connection-store.ts  session-store.test.ts  session-store.ts
