[package]
name = "tiny-sql"
version = "0.0.1-rc1"
description = "多级跳板机友好的 MySQL 桌面客户端"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
ssh-multihop = { path = "../crates/ssh-multihop" }
db-driver = { path = "../crates/db-driver" }
# 连接配置加密 store
aes-gcm = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
# 最近使用时间戳（ISO 8601）
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
