[package]
name = "db-driver"
version = "0.1.0"
description = "MySQL driver —— v0.1 具体 struct，v0.2 加 PG 时 extract trait"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
# 动态结果集解码：DATE/TIME/DATETIME 用 chrono，DECIMAL 用 bigdecimal
chrono = { version = "0.4", default-features = false, features = ["std"] }
bigdecimal = "0.4"

[dev-dependencies]
# integration 测试用 #[tokio::test]
tokio = { workspace = true }
